--- a/Evaluacion03/web/index.html
+++ b/Evaluacion03/web/index.html
@@ -19,7 +19,7 @@ and open the template in the editor.
                 
                 <div class="navbar-item">
                   <div class="buttons">
-                    <a class="button is-link">
+                      <a class="button is-link" href="login.jsp">
                       Inicio sesión
                     </a>
                   </div>
@@ -27,9 +27,18 @@ and open the template in the editor.
               </div>
 
               <div class="navbar-end">
-                <a class="navbar-item">
-                  BUSCAR MIS PEDIDOS
-                </a>
+                <div class="navbar-item">
+                    <div class="field has-addons">
+                        <div class="control">
+                          <input class="input" type="text" placeholder="Correo electrónico">
+                        </div>
+                        <div class="control">
+                          <a class="button is-primary">
+                            BUSCAR MIS PEDIDOS
+                          </a>
+                        </div>
+                    </div>
+                </div>
               </div>
             </div>
           </nav>
