--- a/Evaluacion03/web/index.html
+++ b/Evaluacion03/web/index.html
@@ -22,7 +22,7 @@ and open the template in the editor.
               </div>
               <div class="navbar-end">
                 <a class="navbar-item" href="index.jsp">
-                    PRODUCTOS
+                    REALIZAR PEDIDO
                 </a>
                 <div class="navbar-item">
                     
@@ -45,14 +45,14 @@ and open the template in the editor.
             <div class="columns">
                 <div class="column is-three-quarters">
                     <h1 class="title">Productos</h1>
-                    <table class="table">
+                    <table class="table is-fullwidth">
                         <thead>
                           <tr>
                             <th><abbr title="Código de producto">Cod</abbr></th>
                             <th>Nombre</th>
                             <th>Descripción</th>
-                            <th><abbr title="Precio unitario">Pre. Unit.</abbr></th>
-                            <th>Cantidad</th>
+                            <th><abbr title="Precio unitario">PU</abbr></th>
+                            <th><abbr title="Cantidad">Cant</abbr></th>
                             <th>Subtotal</th>
                             <th>Comprar</th>
                           </tr>
@@ -66,7 +66,11 @@ and open the template in the editor.
                             <td>23</td>
                             <td>12</td>
                             <td>68</td>
-                            <td>Qualification for the <a href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Group_stage" title="2016–17 UEFA Champions League">Champions League group stage</a></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="button is-primary  is-light">Agregar</button>
+                                </div>
+                            </td>
                           </tr>
                           <tr>
                             <th>2</th>
@@ -75,7 +79,11 @@ and open the template in the editor.
                             <td>20</td>
                             <td>7</td>
                             <td>65</td>
-                            <td>Qualification for the <a href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Group_stage" title="2016–17 UEFA Champions League">Champions League group stage</a></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="button is-primary is-light">Agregar</button>
+                                </div>
+                            </td>
                           </tr>
                           <tr>
                             <th>3</th>
@@ -84,7 +92,11 @@ and open the template in the editor.
                             <td>19</td>
                             <td>6</td>
                             <td>69</td>
-                            <td>Qualification for the <a href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Group_stage" title="2016–17 UEFA Champions League">Champions League group stage</a></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="button is-primary is-light">Agregar</button>
+                                </div>
+                            </td>
                           </tr>
                           <tr class="is-selected">
                             <th>4</th>
@@ -93,7 +105,11 @@ and open the template in the editor.
                             <td>19</td>
                             <td>10</td>
                             <td>71</td>
-                            <td>Qualification for the <a href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Champions_League#Play-off_round" title="2016–17 UEFA Champions League">Champions League play-off round</a></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="button is-primary is-light">Agregar</button>
+                                </div>
+                            </td>
                           </tr>
                           <tr>
                             <th>5</th>
@@ -102,7 +118,11 @@ and open the template in the editor.
                             <td>9</td>
                             <td>10</td>
                             <td>49</td>
-                            <td>Qualification for the <a href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Europa_League#Group_stage" title="2016–17 UEFA Europa League">Europa League group stage</a></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="button is-primary is-light">Agregar</button>
+                                </div>
+                            </td>
                           </tr>
                           <tr>
                             <th>6</th>
@@ -111,7 +131,11 @@ and open the template in the editor.
                             <td>9</td>
                             <td>11</td>
                             <td>59</td>
-                            <td>Qualification for the <a href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Europa_League#Group_stage" title="2016–17 UEFA Europa League">Europa League group stage</a></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="button is-primary is-light">Agregar</button>
+                                </div>
+                            </td>
                           </tr>
                           <tr>
                             <th>6</th>
@@ -120,7 +144,11 @@ and open the template in the editor.
                             <td>18</td>
                             <td>9</td>
                             <td>59</td>
-                            <td>Qualification for the <a href="https://en.wikipedia.org/wiki/2016%E2%80%9317_UEFA_Europa_League#Group_stage" title="2016–17 UEFA Europa League">Europa League group stage</a></td>
+                            <td>
+                                <div class="buttons">
+                                    <button class="button is-primary is-light">Agregar</button>
+                                </div>
+                            </td>
                           </tr>
                         </tbody>
                       </table>
